Fix mobile menu z-index so dropdown appears above page content

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,6 +44,7 @@ a {
   padding: 20px 0;
   position: relative;
   overflow: visible;
+  z-index: 100;
 
   .header-stars {
     position: absolute;
